# BunproDms

./: .gitignore  Cargo.toml  README.md
.zed/: settings.json
bunpro_api/: Cargo.toml
bunpro_api/src/: client.rs  config.rs  lib.rs  objects.rs  request.rs  urls.rs
bunpro_api/src/client/: user.rs  user_stats.rs
bunpro_api/src/client/user/: due.rs
bunpro_api/src/client/user_stats/: forecast_daily.rs  forecast_hourly.rs
bunpro_client/: Cargo.toml
bunpro_client/src/: lib.rs  objects.rs
bunpro_dms/: Main.qml  Settings.qml  plugin.json
bunpro_dms/Services/: BunproService.qml  qmldir
bunpro_dms/bunpro/: plugin.qmltypes  qmldir
bunpro_plugin/: Cargo.toml  build.rs
bunpro_plugin/includes/: qtlogging.h
bunpro_plugin/src/: lib.rs  log.rs  panic.rs  qtlogging.cpp  qtlogging.rs  setup.rs
