[package]
name = "bunpro_api"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.3"
const_format = "0.2.36"
jiff = { version = "0.2.29", features = ["serde"] }
reqwest = { version = "0.13.4", features = ["form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
snafu = "0.9.1"
url = "2.5.8"
